# Voice2Text

./: .gitignore  BUILD_COMPLETE.md  BUILD_PREMIUM_UI.md  BUILD_SUCCESS.md  BUILD_WHISPER_WINDOWS.md  CLERK_SETUP_GUIDE.md  CREATE_GITHUB_RELEASE.md  CURSOR_IMPLEMENTATION.md  DEPLOYMENT_COMPLETE.md  FINAL_SUMMARY.md  FIX_TERMINAL_FLASH.md  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  PHASE1_WEBSITE_COMPLETE.md  PHASE2_AUTH_COMPLETE.md  PHASE2_TRANSCRIPTION.md  PHASE3_DASHBOARD_COMPLETE.md  PHASE3_HUD_POLISH.md  PHASE4_DASHBOARD_POLISH.md  PHASE5_PREMIUM_UI_COMPLETE.md  PHASES_COMPLETE.md  PREMIUM_UI_COMPLETE.md  PRODUCTION_READY_STATUS.md  PRODUCTION_WHISPER_IMPLEMENTATION.md  QUICK_REFERENCE_UI.md  QUICK_REFERENCE_UPDATER.md  QUICK_REFERENCE_WHISPER.md  QUICK_START.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md  SAAS_IMPLEMENTATION_PLAN.md  STATUS.md  STATUS_PRODUCTION_WHISPER.md  TASK_COMPLETE.md  TESTING_GUIDE.md  TROUBLESHOOTING_TRANSCRIPTION.md  UPDATER_IMPLEMENTATION.md  UPDATER_READY.md  UPDATER_SETUP.md  (+11 more)
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build_err.txt  build_err_10.txt  build_err_11.txt  build_err_2.txt  build_err_3.txt  build_err_4.txt  build_err_5.txt  build_err_6.txt  build_err_7.txt  build_err_8.txt  build_err_9.txt  build_errors.txt  build_errors_10.txt  build_errors_11.txt  build_errors_2.txt  build_errors_3.txt  build_errors_4.txt  build_errors_5.txt  build_errors_6.txt  build_errors_7.txt  build_errors_8.txt  build_errors_9.txt  errors.txt  errors_full.txt  errors_injection.txt  errors_injection_2.txt  errors_injection_3.txt  errors_injection_4.txt  errors_lib.txt  errors_lib_2.txt  final_errors.txt  final_errors_3.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: README.md
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/audio/: mod.rs
(+23 files in other folders)
