[package]
name = "vanta-dictate"
version = "0.1.0"
description = "Universal speech-to-text dictation for Windows"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vanta_dictate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-positioner = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio capture
cpal = "0.16.0"

# Global hotkey
global-hotkey = "0.6"

[features]
default = []

# Windows APIs for input injection
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Com",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# HTTP client for model downloads
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"

# Logging
log = "0.4"
simplelog = "0.12"

# UUID and datetime
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dirs = "5.0"



